--- a/works.html
+++ b/works.html
@@ -59,12 +59,12 @@
         font-style: italic;
         color: #000;
         font-size: 67.5%;
-        position: relative;
         background: #fff;
       }
       main {
       }
       #container {
+        position: relative;
         height: 100vh;
         height: calc(var(--vh, 1vh) * 100);
         max-width: 1500px;
@@ -77,8 +77,11 @@
         font-size: 5rem;
         color: #EEE;
         position: fixed;
+        /*
         top: 50vh;
         top: calc(var(--vh, 1vh) * 50);
+        */
+        top: 50%;
         left: 50%;
         -webkit-transform: translate(-50%, -50%);
             -ms-transform: translate(-50%, -50%);
