--- a/index.html
+++ b/index.html
@@ -175,14 +175,11 @@
     /**
      * create multiple array
      */
-
     function createMultipleArray(number_one, number_two) {
-      var num_one = number_one;
-      var num_two = number_two;
-      var arr = new Array(num_one);
-      for (var y = 0; y < num_one; y++) {
-        arr[y] = new Array(num_one);
-        for (var x = 0; x < num_two; x++) {
+      var arr = new Array(number_one);
+      for (var y = 0; y < number_one; y++) {
+        arr[y] = new Array(number_two);
+        for (var x = 0; x < number_two; x++) {
           arr[y][x] = 0;
         }
       }
@@ -192,7 +189,6 @@
     /**
      * get random number
      */
-
     function getRandomNumber(min, max) {
       return Math.floor(Math.random() * (max + 1 - min)) + min;
     }
@@ -203,7 +199,6 @@
      * Aurhor / Toshiya Marukubo
      * Twitter / https://twitter.com/toshiyamarukubo
      */
-
     function PixcelDataMap(ctx, x, y) {
       this.ctx = ctx;
       this.x = x;
@@ -298,7 +293,6 @@
     /**
      * Shapes
      */
-
     function Shapes(ctx, x, y) {
       this.ctx = ctx;
       this.init(x, y);
@@ -358,7 +352,6 @@
     /**
      * Glitch
      */
-
     function Glitch(ctx, width, height) {
       this.time;
       this.ctx = ctx;
