--- a/pattern/index.html
+++ b/pattern/index.html
@@ -34,9 +34,10 @@
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/style.css">
   </head>
-  <body style="display: none;">
+  <body>
     <canvas id="canvas"></canvas>
     <!-- Header -->
+    <div class="loading"></div>
     <header>
       <h1><a href="./index.html"><span class="logo"></span>Pattern</a></h1>
       <nav>
@@ -48,11 +49,10 @@
     </header>
     <!-- Main -->
     <main>
-      <h2 id="title">Introduces Traditional Japanese Patterns / 日本の伝統文様</h2>
+      <h2 id="title">Traditional Japanese Patterns / 日本の伝統文様</h2>
     </main>
     <!-- Script -->
-    <script defer src="./scripts/fadeInOut.js"></script>
+    <script defer src="./scripts/loaded.js"></script>
     <script defer src="./scripts/falling.js"></script>
-    <script defer src="./scripts/preloadImage.js"></script>
   </body>
 </html>
