--- a/pattern/works/index.html
+++ b/pattern/works/index.html
@@ -34,8 +34,9 @@
     <link rel="stylesheet" href="../styles/reset.css">
     <link rel="stylesheet" href="../styles/style.css">
   </head>
-  <body style="display: none;">
+  <body>
     <!-- Header -->
+    <div class="loading"></div>
     <header>
       <h1><a href="../index.html"><span class="logo"></span>Pattern</a></h1>
       <nav>
@@ -55,6 +56,7 @@
         <li><a href="./mimasutsunagi/index.html"><img src="../images/mimasutsunagi.png" alt="mimasutsunagi image"></a></li>
         <li><a href="./mimasumon/index.html"><img src="../images/mimasumon.png" alt="mimasumon image"></a></li>
         <li><a href="./poop/index.html"><img src="../images/poop.png" alt="poop image"></a></li>
+        <!--
         <li><a href="./komochikobenkeigoushi/index.html"><img src="../images/komochikobenkeigoushi.png" alt="komochikobenkeigoushi image"></a></li>
         <li><a href="./kobenkeigoushi/index.html"><img src="../images/kobenkeigoushi.png" alt="kobenkeigoushi image"></a></li>
         <li><a href="./benkeigoushi2/index.html"><img src="../images/benkeigoushi2.png" alt="benkeigoushi2 image"></a></li>
@@ -69,6 +71,7 @@
         <li><a href="./kogoushi/index.html"><img src="../images/kogoushi.png" alt="kogoushi image"></a></li>
         <li><a href="./gobangoushi/index.html"><img src="../images/gobangoushi.png" alt="gobangoushi image"></a></li>
         <li><a href="./mijingoushi/index.html"><img src="../images/mijingoushi.png" alt="mijingoushi image"></a></li>
+        -->
         <li><a href="./kuruwatsunagi/index.html"><img src="../images/kuruwatsunagi.png" alt="kuruwatsunagi image"></a></li>
         <li><a href="./kuginukitsunagi/index.html"><img src="../images/kuginukitsunagi.png" alt="kuginukitsunagi image"></a></li>
         <li><a href="./sorobanjima/index.html"><img src="../images/sorobanjima.png" alt="sorobanjima image"></a></li>
@@ -77,6 +80,7 @@
         <li><a href="./yamajimon/index.html"><img src="../images/yamajimon.png" alt="yamajimon image"></a></li>
         <li><a href="./tatewaku/index.html"><img src="../images/tatewaku.png" alt="tatewaku image"></a></li>
         <li><a href="./yorokejima/index.html"><img src="../images/yorokejima.png" alt="yorokejima image"></a></li>
+        <!--
         <li><a href="./ryoukomochijima/index.html"><img src="../images/ryoukomochijima.png" alt="ryoukomochijima image"></a></li>
         <li><a href="./komochijima/index.html"><img src="../images/komochijima.png" alt="komochijima image"></a></li>
         <li><a href="./ryoutakijima/index.html"><img src="../images/ryoutakijima.png" alt="ryoutakijima image"></a></li>
@@ -90,6 +94,7 @@
         <li><a href="./sensuji/index.html"><img src="../images/sensuji.png" alt="sensuji image"></a></li>
         <li><a href="./misujidate/index.html"><img src="../images/misujidate.png" alt="misujidate image"></a></li>
         <li><a href="./kindooshi/index.html"><img src="../images/kindooshi.png" alt="kindooshi image"></a></li>
+        -->
         <li><a href="./ararekomon/index.html"><img src="../images/ararekomon.png" alt="ararekomon image"></a></li>
         <li><a href="./kuzureasanoha/index.html"><img src="../images/kuzureasanoha.png" alt="kuzureasanoha image"></a></li>
         <li><a href="./asanoha/index.html"><img src="../images/asanoha.png" alt="asanoha image"></a></li>
@@ -115,7 +120,7 @@
       </ul>
     </main>
     <!-- Script -->
-    <script defer src="../scripts/fadeInOut.js"></script>
-    <script defer src="../scripts/loadedImage.js"></script>
+    <script defer src="../scripts/displayImage.js"></script>
+    <script defer src="../scripts/loaded.js"></script>
   </body>
 </html>
