--- a/pattern/index.html
+++ b/pattern/index.html
@@ -50,7 +50,9 @@
     </header>
     <!-- Main -->
     <main>
-      <h2 id="title">Traditional Japanese Patterns / 日本の伝統文様</h2>
+      <div id="titleFrame">
+        <h2 id="title">Traditional Japanese Patterns / 日本の伝統文様</h2>
+      </div>
     </main>
     <!-- Script -->
     <script defer src="./scripts/loaded.js"></script>
