--- a/pattern/works/kozakura/index.html
+++ b/pattern/works/kozakura/index.html
@@ -51,7 +51,7 @@
       <h1><a href="../../index.html"><span class="logo"></span>Pattern</a></h1>
       <nav>
         <ul>
-                    <li>from 日本・中国の文様事典</li>
+          <li>from 日本・中国の文様事典</li>
           <li><a href="https://twitter.com/toshiyamarukubo" target="_blank">@toshiyamarukubo</a></li>
           <li class="flash"><a href="../index.html">Works</a></li>
         </ul>
@@ -59,7 +59,9 @@
     </header>
     <!-- Main -->
     <main>
-      <h2 id="title">Now Loading...</h2>
+      <div id="titleFrame">
+        <h2 id="title"></h2>
+      </div>
     </main>
     <!-- Script -->
     <script defer src="../../scripts/loaded.js"></script>
