--- a/sketchWithCode/index.html
+++ b/sketchWithCode/index.html
@@ -69,7 +69,7 @@
       </main>
       <nav>
         <ul>
-          <li><a href="https://github.com/toshiya-marukubo/shapes" target="_black"><img src="./images/GitHub-Mark-32px.png" alt="GitHub Logo"></a></li>
+          <li><a href="https://github.com/toshiya-marukubo/shapes" target="_blank"><img src="./images/GitHub-Mark-32px.png" alt="GitHub Logo"></a></li>
         </ul>
       </nav>
       <footer>
@@ -88,6 +88,6 @@
     <script src="./scripts/datInstance.js"></script>
     <script src="./scripts/effect.js"></script>
     <script src="./scripts/shapes.js"></script>
-    <script src="./scripts/script.js"></script>
+    <script src="./scripts/main.js"></script>
   </body>
 </html>
