added line up class

--- a/sketchWithCode/index.html
+++ b/sketchWithCode/index.html
@@ -61,7 +61,9 @@
         <div id="jsClose"><a href="#"></a></div>
         <div class="frameInMain">
           <h3>This code that in the case of using my shapes library.</h3>
-          <p class="downloadLink"><a href="https://github.com/toshiya-marukubo/shapes" target="_blank">Library download link - GitHub (https://github.com/toshiya-marukubo)</a></p>
+          <p class="downloadLink">
+            <a href="https://github.com/toshiya-marukubo/shapes" target="_blank">Library download link - GitHub (https://github.com/toshiya-marukubo/shapes)</a>
+          </p>
           <p>You can use to copy the following code. (Not supported, effect, line up.)</p>
           <div id="jsCodeOne"></div>
           <div class="copied">Click to copy!</div>
@@ -85,6 +87,7 @@
     <script src="./scripts/dat.gui.min.js"></script>
     <script src="./scripts/simplex-noise.js"></script>
     <script src="./scripts/utils.js"></script>
+    <script src="./scripts/lineUp.js"></script>
     <script src="./scripts/datInstance.js"></script>
     <script src="./scripts/effect.js"></script>
     <script src="./scripts/shapes.js"></script>
