updated sketch with code file.

--- a/sketchWithCode/index.html
+++ b/sketchWithCode/index.html
@@ -62,7 +62,7 @@
         <div class="frameInMain">
           <h3>This code that in the case of using my shapes library.</h3>
           <p class="downloadLink">
-            <a href="https://github.com/toshiya-marukubo/shapes" target="_blank">Library download link - GitHub (https://github.com/toshiya-marukubo/shapes)</a>
+            <a href="https://github.com/toshiya-marukubo/sketchWithCode/README.md" target="_blank">Library download link - GitHub (https://github.com/toshiya-marukubo/sketchWithCode/README.md)</a>
           </p>
           <p>You can use to copy the following code. (Not supported, effect, line up.)</p>
           <div id="jsCodeOne"></div>
@@ -71,7 +71,7 @@
       </main>
       <nav>
         <ul>
-          <li><a href="https://github.com/toshiya-marukubo/shapes" target="_blank"><img src="./images/GitHub-Mark-32px.png" alt="GitHub Logo"></a></li>
+          <li><a href="https://github.com/toshiya-marukubo/sketchWithCode/README.md" target="_blank"><img src="./images/GitHub-Mark-32px.png" alt="GitHub Logo"></a></li>
         </ul>
       </nav>
       <footer>
