--- a/sketchWithCode/index.html
+++ b/sketchWithCode/index.html
@@ -72,6 +72,7 @@
       <nav>
         <ul>
           <li><a href="https://github.com/toshiya-marukubo/sketchWithCode/README.md" target="_blank"><img src="./images/GitHub-Mark-32px.png" alt="GitHub Logo"></a></li>
+          <li><a href="https://www.instagram.com/toshiyamarukubo/" target="_blank"><img src="./images/instagram-logo.png" alt="Instagram Logo"></a></li>
         </ul>
       </nav>
       <footer>
