--- a/sketchWithCode/index.html
+++ b/sketchWithCode/index.html
@@ -20,7 +20,7 @@
     <meta property="og:url" content="https://toshiya-marukubo.github.io/sketchWithcode/index.html">
     <meta property="og:title" content="Toshiya Marukubo | Homepage | Sketch with Code">
     <meta property="og:image" content="https://toshiya-marukubo.github.io/sketchWithCode/images/og-home.png">
-    <meta property="og:description" content="Generate code that can be used in the Canvas.">
+    <meta property="og:description" content="Generate code and image, that can be used in the Canvas.">
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@toshiyamarukubo">
@@ -55,7 +55,7 @@
     <div id="container">
       <header>
         <h1>Sketch with Code</h1>
-        <h2>Generate code that can be used in the Canvas.</h2>
+        <h2>Generate code and image, that can be used in the Canvas.</h2>
       </header>
       <main id="main">
         <div id="jsClose"><a href="#"></a></div>
