--- a/sketchWithCode/index.html
+++ b/sketchWithCode/index.html
@@ -27,7 +27,7 @@
     <meta name="twitter:creator" content="@toshiyamarukubo">
     <!-- Icons -->
     <link rel="icon" href="https://toshiya-marukubo.github.io/sketchWithCode/favicon.png">
-    <link rel="apple-touch-icon" sizes="128x128" href="https://toshiya-marukubo.github.io/sketchWithCode/images/apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="128x128" href="https://toshiya-marukubo.github.io/sketchWithCode/apple-touch-icon.png">
     <!-- Style -->
     <link href="./styles/reset.css" rel="stylesheet">
     <link href="./styles/loadingStyle.css" rel="stylesheet">
@@ -62,7 +62,7 @@
         <div class="frameInMain">
           <h3>This code that in the case of using my shapes library.</h3>
           <p class="downloadLink">
-            <a href="https://github.com/toshiya-marukubo/sketchWithCode/README.md" target="_blank">Library download link - GitHub (https://github.com/toshiya-marukubo/sketchWithCode/README.md)</a>
+            <a href="https://github.com/toshiya-marukubo/toshiya-marukubo.github.io/blob/main/sketchWithCode/README.md" target="_blank">Library download link - GitHub (https://github.com/toshiya-marukubo/toshiya-marukubo.github.io/blob/main/sketchWithCode/README.md)</a>
           </p>
           <p>You can use to copy the following code. (Not supported, effect, line up.)</p>
           <div id="jsCodeOne"></div>
@@ -71,7 +71,7 @@
       </main>
       <nav>
         <ul>
-          <li><a href="https://github.com/toshiya-marukubo/sketchWithCode/README.md" target="_blank"><img src="./images/GitHub-Mark-32px.png" alt="GitHub Logo"></a></li>
+          <li><a href="https://github.com/toshiya-marukubo/toshiya-marukubo.github.io/blob/main/sketchWithCode/README.md" target="_blank"><img src="./images/GitHub-Mark-32px.png" alt="GitHub Logo"></a></li>
           <li><a href="https://www.instagram.com/toshiyamarukubo/" target="_blank"><img src="./images/instagram-logo.png" alt="Instagram Logo"></a></li>
         </ul>
       </nav>
