--- a/sketchWithCode/index.html
+++ b/sketchWithCode/index.html
@@ -35,7 +35,7 @@
     <!-- Title -->
     <title>Toshiya Marukubo | Homepage | Sketch with Code</title>
   </head>
-  <body>
+  <body style="visibility:hidden">
     <div id="jsLoadingFrame">
       <div class="jsTexts">
         <span class="text-0">N</span>
@@ -71,8 +71,8 @@
       </main>
       <nav>
         <ul>
-          <li><a href="https://github.com/toshiya-marukubo/toshiya-marukubo.github.io/blob/main/sketchWithCode/README.md" target="_blank"><img src="./images/GitHub-Mark-32px.png" alt="GitHub Logo"></a></li>
-          <li><a href="https://www.instagram.com/toshiyamarukubo/" target="_blank"><img src="./images/instagram-logo.png" alt="Instagram Logo"></a></li>
+          <li><a href="https://github.com/toshiya-marukubo/toshiya-marukubo.github.io/blob/main/sketchWithCode/README.md" target="_blank"><img src="./images/GitHub-Mark-32px.png" alt="GitHub Logo" width="32" height="32"></a></li>
+          <li><a href="https://www.instagram.com/toshiyamarukubo/" target="_blank"><img src="./images/instagram-logo.png" alt="Instagram Logo" width="32" height="32"></a></li>
         </ul>
       </nav>
       <footer>
