--- a/sketchWithCode/index.html
+++ b/sketchWithCode/index.html
@@ -85,13 +85,13 @@
         <span id="jsAgainButton"><a href="#">One more</a></span>
       </div>
     </div>
-    <script src="./scripts/dat.gui.min.js"></script>
-    <script src="./scripts/simplex-noise.js"></script>
-    <script src="./scripts/utils.js"></script>
-    <script src="./scripts/lineUp.js"></script>
-    <script src="./scripts/datInstance.js"></script>
-    <script src="./scripts/effect.js"></script>
-    <script src="./scripts/shapes.js"></script>
-    <script src="./scripts/main.js"></script>
+    <script defer src="./scripts/dat.gui.min.js"></script>
+    <script defer src="./scripts/simplex-noise.js"></script>
+    <script defer src="./scripts/utils.js"></script>
+    <script defer src="./scripts/lineUp.js"></script>
+    <script defer src="./scripts/datInstance.js"></script>
+    <script defer src="./scripts/effect.js"></script>
+    <script defer src="./scripts/shapes.js"></script>
+    <script defer src="./scripts/main.js"></script>
   </body>
 </html>
