--- a/sketchWithCode/index.html
+++ b/sketchWithCode/index.html
@@ -62,7 +62,7 @@
         <div class="frameInMain">
           <h3>This code that in the case of using my shapes library.</h3>
           <p class="downloadLink">
-            <a href="https://github.com/toshiya-marukubo/toshiya-marukubo.github.io/blob/main/sketchWithCode/README.md" target="_blank">Library download link - GitHub (https://github.com/toshiya-marukubo/toshiya-marukubo.github.io/blob/main/sketchWithCode/README.md)</a>
+            <a href="https://github.com/toshiya-marukubo/toshiya-marukubo.github.io/blob/main/sketchWithCode/README.md" target="_blank" rel="noopener">Library download link - GitHub (https://github.com/toshiya-marukubo/toshiya-marukubo.github.io/blob/main/sketchWithCode/README.md)</a>
           </p>
           <p>You can use to copy the following code. (Not supported, effect, line up.)</p>
           <div id="jsCodeOne"></div>
@@ -71,13 +71,13 @@
       </main>
       <nav>
         <ul>
-          <li><a href="https://github.com/toshiya-marukubo/toshiya-marukubo.github.io/blob/main/sketchWithCode/README.md" target="_blank"><img src="./images/GitHub-Mark-32px.png" alt="GitHub Logo" width="32" height="32"></a></li>
-          <li><a href="https://www.instagram.com/toshiyamarukubo/" target="_blank"><img src="./images/instagram-logo.png" alt="Instagram Logo" width="32" height="32"></a></li>
+          <li><a href="https://github.com/toshiya-marukubo/toshiya-marukubo.github.io/blob/main/sketchWithCode/README.md" target="_blank" rel="noopener"><img src="./images/GitHub-Mark-32px.png" alt="GitHub Logo" width="32" height="32"></a></li>
+          <li><a href="https://www.instagram.com/toshiyamarukubo/" target="_blank" rel="noopener"><img src="./images/instagram-logo.png" alt="Instagram Logo" width="32" height="32"></a></li>
         </ul>
       </nav>
       <footer>
         <p>
-          <small><a href="https://twitter.com/toshiyamarukubo" target="_blank">@toshiyamarukubo</a></small>
+          <small><a href="https://twitter.com/toshiyamarukubo" target="_blank" rel="noopener">@toshiyamarukubo</a></small>
         </p>
       </footer>
       <div id="jsImageFrame">
