--- a/sketchWithCode/index.html
+++ b/sketchWithCode/index.html
@@ -35,7 +35,7 @@
     <!-- Title -->
     <title>Toshiya Marukubo | Homepage | Sketch with Code</title>
   </head>
-  <body style="visibility:hidden">
+  <body>
     <div id="jsLoadingFrame">
       <div class="jsTexts">
         <span class="text-0">N</span>
