--- a/sketchWithCode/index.html
+++ b/sketchWithCode/index.html
@@ -55,7 +55,7 @@
     <div id="container">
       <header>
         <h1>Sketch with Code</h1>
-        <h2>Generate code and image, that can be used in the Canvas.</h2>
+        <h2>Anyone can create generative art.</h2>
       </header>
       <main id="main">
         <div id="jsClose"><a href="#"></a></div>
