--- a/sketchWithCode/index.html
+++ b/sketchWithCode/index.html
@@ -64,7 +64,7 @@
           <p class="downloadLink">
             <a href="https://github.com/toshiya-marukubo/toshiya-marukubo.github.io/blob/main/sketchWithCode/README.md" target="_blank" rel="noopener">Library download link - GitHub (https://github.com/toshiya-marukubo/toshiya-marukubo.github.io/blob/main/sketchWithCode/README.md)</a>
           </p>
-          <p>You can use to copy the following code. (Not supported, effect, line up.)</p>
+          <p>You can use following code and use it.</p>
           <div id="jsCodeOne"></div>
           <div class="copied">Click to copy!</div>
         </div>
