--- a/sketchWithCode/index.html
+++ b/sketchWithCode/index.html
@@ -64,7 +64,13 @@
           <p class="downloadLink">
             <a href="https://github.com/toshiya-marukubo/toshiya-marukubo.github.io/blob/main/sketchWithCode/README.md" target="_blank" rel="noopener">Library download link - GitHub (https://github.com/toshiya-marukubo/toshiya-marukubo.github.io/blob/main/sketchWithCode/README.md)</a>
           </p>
-          <p>You can use following code and use it.</p>
+          <p>You can use following code and use it. (Not supported line up, effect)</p>
+          <ul>
+            <li>Change these to any parameters you like.</li>
+            <li>ctx is canvas context 2d.</li>
+            <li>x is where you want to put it.</li>
+            <li>y is where you want to put it.</li>
+          </ul>
           <div id="jsCodeOne"></div>
           <div class="copied">Click to copy!</div>
         </div>
