--- a/sketchWithCode/index.html
+++ b/sketchWithCode/index.html
@@ -90,6 +90,7 @@
         <span id="donwloadButton"><a href="#">Download</a></span>
         <span id="jsAgainButton"><a href="#">One more</a></span>
       </div>
+      <input id="inputImage" type="file">
     </div>
     <script defer src="./scripts/dat.gui.min.js"></script>
     <script defer src="./scripts/simplex-noise.js"></script>
